[package]
authors = ["Matteo Carnelos <matteo.carnelos@studenti.unipd.it>"]
categories = ["embedded", "command-line-utilities"]
description = "A cargo runner for Arduino boards"
keywords = ["arduino", "runner", "cli", "terminal"]
license = "MIT OR Apache-2.0"
name = "arduino-run"
repository = "https://github.com/matteocarnelos/arduino-run"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive", "env"] }
colored = "2.0"
anyhow = "1.0"
